tests/vertical-slice/reject/closure_param_field_store.hew
// A fn-typed parameter is a borrow of the caller's pair. Storing it into
// an owning record field would let the record free an environment the
// callee never owned: one caller passing the same closure to two storing
// calls double-frees. Refused at the store site, with the owning
// alternatives named in the diagnostic.
type Holder {
    cb: fn(i64) -> i64;
}

fn make_adder(n: i64) -> fn(i64) -> i64 {
    |x: i64| x + n
}

fn stash(f: fn(i64) -> i64) -> Holder {
    Holder { cb: f }
}

fn main() {
    let h = stash(make_adder(7));
    println(h.cb(1));
}
